# Open-RRV-ISS

./: .gitignore  Cargo.toml  LICENSE  README.md  run_md5_test.sh  run_test.sh
cpu_peripherals/: Cargo.toml
cpu_peripherals/src/: bus.rs  clint.rs  lib.rs  mem.rs  uart.rs
iss/: Cargo.toml
iss/src/: main.rs
resources/execute/: rv32_c.rs  rv32_i.rs  rv64_a.rs  rv64_c.rs  rv64_d.rs  rv64_f.rs  rv64_i.rs  rv64_m.rs  rv_a.rs  rv_c.rs  rv_d.rs  rv_f.rs  rv_i.rs  rv_m.rs  rv_system.rs  rv_zicsr.rs  rv_zifencei.rs
resources/inst/: inst_cause.rs  inst_csr_reg.rs  inst_rv32_c.rs  inst_rv32_i.rs  inst_rv64_a.rs  inst_rv64_c.rs  inst_rv64_d.rs  inst_rv64_f.rs  inst_rv64_i.rs  inst_rv64_m.rs  inst_rv_a.rs  inst_rv_c.rs  inst_rv_d.rs  inst_rv_f.rs  inst_rv_i.rs  inst_rv_m.rs  inst_rv_system.rs  inst_rv_zicsr.rs  inst_rv_zifencei.rs
rv_core/: Cargo.toml
rv_core/src/: core.rs  csr.rs  fetch.rs  inst_cause.rs  inst_csr_reg.rs  lib.rs  trap.rs
sim_lib/: Cargo.toml
sim_lib/src/: lib.rs  loader.rs  (+1 more)
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: exec_add_instr.rs  exec_branch_jump_instr.rs  exec_ecall_instr.rs  exec_instr_of_md5.rs  exec_load_store_instr.rs  test_exit_code.rs  test_load_elf_file.rs  test_md5.rs
tests/tests/common/: mod.rs
tests/tests/data/: .clang-format  Makefile  empty_main.c  hello.c  test_beq.s  test_ecall.s  test_jal.s  test_jalr.s  test_load_store.s
tests/tests/data/common/: linker_script.ld  start.s  uart_printf.c  uart_printf.h
tests/tests/data/exit_code/: exit_code_1.c
tests/tests/data/md5/: main.c  md5.c  md5.h  unique_instr.py
(+15 files in other folders)
