[package]
name = "tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cpu_peripherals = { path = "../cpu_peripherals" }
sim_lib = { path = "../sim_lib" }
rv_core = { path = "../rv_core" }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
